# hpstr

./: CMakeLists.txt  hpstr_main.xcconfig  hpstr_processing.xcconfig
MacOS/: hpstr_event.xcconfig
MacOS/hpstr.xcodeproj/: project.pbxproj
alternate/: CMakeLists.txt  README.md
alternate/include/: AlternateDef.h  AlternateLinkDef.h  BaseAna.h  Counter.h
alternate/src/: BaseAna.cxx  Counter.cxx
execs/src/: ConfigurePython.cxx  hpstr.cxx
hpstr.xcodeproj/: project.pbxproj
processing/: CMakeLists.txt
processing/src/: EventFile.cxx  Process.cxx
processors/include/: HodoDataProcessor.h
processors/src/: HodoDataProcessor.cxx  StdhepMCParticleProcessor.cxx  SvtRawDataAnaProcessor.cxx
